# data-encoding-techniques

./: README.md
encoding_techs/: pyproject.toml
encoding_techs/encoding_techs/apache_avro/: README.md  encode.py  person.avsc
encoding_techs/encoding_techs/apache_thrift/: README.md  encode.py  person.thrift
encoding_techs/encoding_techs/apache_thrift/gen_py/person/: ttypes.py
encoding_techs/encoding_techs/cap_n_proto/: README.md  encode.py  person.capnp
encoding_techs/encoding_techs/json_string/: README.md  encode.py
encoding_techs/encoding_techs/message_pack/: README.md  encode.py
encoding_techs/encoding_techs/protocol_buffer/: README.md  encode.py  person.proto  person_pb2.py
