[tool.poetry]
name = "encodings"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
protobuf = "^4.22.1"
msgpack = "^1.0.4"
thrift = "^0.16.0"
avro = "^1.11.1"
pycapnp = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
